# streamlit_workshop

./: app.py  categories.csv  pyproject.toml
pages/: insights.py
