[tool.poetry]
name = "streamlit-workshop"
version = "0.1.0"
description = ""
authors = ["Sören Etler <moin@soerenetler.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
